--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
 
                @@include('html/About/About.html',{})
 
-
-
                @@include('html/Submit-Application/Submit-Application.html',{"title": "Остались вопросы?"})
+
+               @@include('html/Map/Map.html',{})
 
                @@include('html/Contacts/Contacts.html',{})
 
