--- a/src/html/About/About.html
+++ b/src/html/About/About.html
@@ -61,6 +61,7 @@
          </div>
 
       </div>
-
+      <div class="about__line-1" data-speed="0.7"></div>
+      <div class="about__line-2" data-speed="0.6"></div>
    </div>
 </section>
