--- a/src/html/Characteristic/Characteristic.html
+++ b/src/html/Characteristic/Characteristic.html
@@ -24,5 +24,7 @@
             <div class="characteristic__block-text">Начинаем работу сразу и без сомнительной предоплаты. Сверхурочная работа – за наш счет, а с делом работают финансовые управляющие, а не лишние юристы, которые меняются каждый день.</div>
          </div>
       </div>
+      <div class="characteristic__line-1" data-speed="0.8"></div>
+      <div class="characteristic__line-2" data-speed="0.6"></div>
    </div>
 </section>
