--- a/src/html/1_head.html
+++ b/src/html/1_head.html
@@ -1,5 +1,9 @@
 <title>"@@title"</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta name="viewport" content="width=device-width initial-scale=1.0">
-<meta name="og:description" content="Банкротное бюро">
+<meta name="description" content="Банкротное бюро">
+<meta property="twitter:title" content="Банкротное бюро">
+<meta property="twitter:description" content="Банкротное Бюро Про – это команда профессионалов своего дела из опытных арбитражных управляющих и юристов высшей категории. Освобождаем граждан от долгов уже 8 лет без бюрократических ошибок и можем подтвердить наш опыт без дополнительных условий и звездочек.">
+<meta name="twitter:image" content="https://gorejkoff.github.io/BBP2/dist/img/jpg/Cover.jpg">
+
 <link rel="stylesheet" href="css/style.css">
