--- a/src/html/1_head.html
+++ b/src/html/1_head.html
@@ -1,13 +1,5 @@
 <title>"@@title"</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta name="viewport" content="width=device-width initial-scale=1.0">
-
-<meta name="description" content="Краткое описание страницы">
-<meta property="og:title" content="Банкротное бюро">
-<meta property="og:description" content="Банкротное Бюро Про – это команда профессионалов своего дела из опытных арбитражных управляющих и юристов высшей категории.">
-<meta property="og:image" content="https://gorejkoff.github.io/BBP2/dist/img/jpg/Cover.jpg">
-<meta property="og:url" content="https://gorejkoff.github.io/BBP2/dist/index.html">
-<link rel="image_src" href="https://gorejkoff.github.io/BBP2/dist/img/jpg/Cover.jpg">
-
-
+<meta name="description" content="Банкротное бюро>">
 <link rel="stylesheet" href="css/style.css">
